# OracleOne_Challenge_Encrypt

./: LICENSE  Makefile  README.md  index.html
.github/workflows/: static.yml
TextDecode/rust_front_end/: Cargo.toml  Dockerfile
TextDecode/rust_front_end/src/: main.rs
TextDecode/rust_front_end/src/components/atoms/: nav_logo.rs
docs/: index.html
docs/rust/: index.html  rust_front_end-82081d21f5054d3a.js  rust_front_end-82081d21f5054d3a_bg.wasm  rust_front_end-a3ac45d19d25549e.js  rust_front_end-a3ac45d19d25549e_bg.wasm  rust_front_end-cfd0d12afa80474.js  rust_front_end-cfd0d12afa80474_bg.wasm
front_end_simple/: index.html  index.js  style.css
rust_front_end/: .gitignore  Cargo.toml  index.html
rust_front_end/src/: main.rs
rust_front_end/src/components/: mod.rs
rust_front_end/src/components/atoms/: custom_button.rs  mod.rs  nav_logo.rs  text_field.rs
rust_front_end/src/components/molecules/: custom_form.rs  mod.rs  result_field.rs
rust_front_end/src/components/organisms/: body_simple.rs  mod.rs  navbar.rs
rust_front_end/src/components/pages/: mod.rs  simple_encrypt.rs
