[package]
name = "rust_front_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
yew = { version = "0.20.0", features = ["csr"] }
stylist = {verrsion = "0.12.0", features= ["yew"]}
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features=["HtmlInputElement"]}
aho-corasick = "1.0.0"
regex = "1.7.3"
